--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^3.1.1",
     "react": "^18",
     "react-circle-progress-bar": "^0.1.4",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-simple-star-rating": "^5.1.7",
     "reactjs-flip-card": "^2.0.3",
