--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-circle-progress-bar": "^0.1.4",
     "react-device-detect": "^2.2.3",
@@ -41,8 +41,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
